# SYCL-sample-app

./: .gitignore  CMakeLists.txt  README.md
include/: vector_add.hpp
src/: sample_app.cpp  vector_add.cpp
